First commited as before_46272_rev5